thunar svn plugin svn helper program added. it supports update and login.
(Old svn revision: 2808)

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,8 @@
 SUBDIRS =								\
 	icons								\
 	po								\
-	thunar-svn-plugin
+	thunar-svn-plugin						\
+	tsp-svn-helper
 
 distclean-local:
 	rm -rf *.spec *.cache *~
