* Updated translation:   - make update-po   - realy added Dutch translations * Added action:   - Add   - Cleanup   - Commit
The thunar svn plugin is pretty usable now.
This is commited using the plugin :)

(Old svn revision: 3754)

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -7,11 +7,15 @@ tsp-svn-helper/gtkfilechooserdefault.c
 tsp-svn-helper/gtkfilechooserentry.c
 tsp-svn-helper/gtkfilechooserutils.c
 tsp-svn-helper/main.c
+tsp-svn-helper/tsh-add.c
 tsp-svn-helper/tsh-checkout.c
 tsp-svn-helper/tsh-checkout-dialog.c
+tsp-svn-helper/tsh-cleanup.c
+tsp-svn-helper/tsh-commit.c
 tsp-svn-helper/tsh-common.c
 tsp-svn-helper/tsh-dialog-common.c
 tsp-svn-helper/tsh-file-dialog.c
+tsp-svn-helper/tsh-log-message-dialog.c
 tsp-svn-helper/tsh-login-dialog.c
 tsp-svn-helper/tsh-notify-dialog.c
 tsp-svn-helper/tsh-trust-dialog.c
