--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -12,17 +12,24 @@ tsp-svn-helper/tsh-checkout.c
 tsp-svn-helper/tsh-cleanup.c
 tsp-svn-helper/tsh-commit.c
 tsp-svn-helper/tsh-common.c
+tsp-svn-helper/tsh-copy.c
+tsp-svn-helper/tsh-copy.c
 tsp-svn-helper/tsh-delete.c
 tsp-svn-helper/tsh-dialog-common.c
 tsp-svn-helper/tsh-export.c
 tsp-svn-helper/tsh-file-dialog.c
 tsp-svn-helper/tsh-import.c
+tsp-svn-helper/tsh-lock.c
+tsp-svn-helper/tsh-lock-dialog.c
 tsp-svn-helper/tsh-log-message-dialog.c
 tsp-svn-helper/tsh-login-dialog.c
+tsp-svn-helper/tsh-move.c
 tsp-svn-helper/tsh-notify-dialog.c
+tsp-svn-helper/tsh-resolved.c
 tsp-svn-helper/tsh-revert.c
 tsp-svn-helper/tsh-status.c
 tsp-svn-helper/tsh-status-dialog.c
 tsp-svn-helper/tsh-transfer-dialog.c
 tsp-svn-helper/tsh-trust-dialog.c
+tsp-svn-helper/tsh-unlock.c
 tsp-svn-helper/tsh-update.c 
