--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,6 +1,7 @@
 thunar-svn-plugin/thunar-svn-plugin.c
 thunar-svn-plugin/tsp-provider.c
 thunar-svn-plugin/tsp-svn-action.c
+thunar-svn-plugin/tsp-svn-property-page.c
 thunar-svn-plugin/tsp-svn-backend.c
 tsp-svn-helper/gtkfilechooser.c
 tsp-svn-helper/gtkfilechooserdefault.c
