--- a/thunar-svn-plugin/Makefile.am
+++ b/thunar-svn-plugin/Makefile.am
@@ -17,6 +17,8 @@ thunar_svn_plugin_la_SOURCES =						\
 	tso-svn-backend.h						\
 	tsp-svn-action.c						\
 	tso-svn-action.h						\
+	tsp-svn-property-page.c						\
+	tso-svn-property-page.h						\
 	tsp-provider.c							\
 	tsp-provider.h							\
 	thunar-svn-plugin.c
