gtk/gtkfilechooserprivate.h doesn't seem to exist everywhere, so removed gtkfilechooserentry (until a "clean" replacement is made) changed the gtkfilechooserentry to an entry and a browse button
(Old svn revision: 3771)

--- a/tsp-svn-helper/Makefile.am
+++ b/tsp-svn-helper/Makefile.am
@@ -46,15 +46,6 @@ tsp_svn_helper_SOURCES =						\
 	tsh-unlock.c							\
 	tsh-update.h							\
 	tsh-update.c							\
-	gtkfilechooserentry.h						\
-	gtkfilechooserentry.c						\
-	gtkfilechooserutils.h						\
-	gtkfilechooserutils.c						\
-	gtkfilechooser.h						\
-	gtkfilechooser.c						\
-	gtkfilechooserdefault.c						\
-	gtkprivate.h							\
-	gtkintl.h							\
 	tsh-dialog-common.h						\
 	tsh-dialog-common.c						\
 	tsh-login-dialog.h						\
@@ -73,6 +64,16 @@ tsp_svn_helper_SOURCES =						\
 	tsh-log-message-dialog.c					\
 	tsh-transfer-dialog.h						\
 	tsh-transfer-dialog.c
+#	gtkfilechooserentry.h						\
+#	gtkfilechooserentry.c						\
+#	gtkfilechooserutils.h						\
+#	gtkfilechooserutils.c						\
+#	gtkfilechooser.h						\
+#	gtkfilechooser.c						\
+#	gtkfilechooserdefault.c						\
+#	gtkprivate.h							\
+#	gtkintl.h							\
+#
 
 tsp_svn_helper_CPPFLAGS =						\
 	-DG_LOG_DOMAIN=\"tsp-svn-helper\"
