applied patch from bug #3787 Jean-François Wauthy <pollux@xfce.org> made all svn actions part of the SVN submenu
(Old svn revision: 3782)

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -170,6 +170,8 @@ AC_OUTPUT([
 Makefile
 icons/Makefile
 icons/16x16/Makefile
+icons/24x24/Makefile
+icons/48x48/Makefile
 po/Makefile.in
 thunar-svn-plugin/Makefile
 tsp-svn-helper/Makefile
