--- a/configure.ac.in
+++ b/configure.ac.in
@@ -14,7 +14,7 @@ m4_define([tsp_version_major], [0])
 m4_define([tsp_version_minor], [0])
 m4_define([tsp_version_micro], [1])
 m4_define([tsp_version_build], [r@REVISION@])
-m4_define([tsp_version_tag], [svn])
+m4_define([tsp_version_tag], []) # Leave empty for releases
 m4_define([tsp_version], [tsp_version_major().tsp_version_minor().tsp_version_micro()ifelse(tsp_version_tag(), [], [], [tsp_version_tag()-tsp_version_build()])])
 
 dnl *******************************************
@@ -29,7 +29,6 @@ AC_COPYRIGHT([Copyright (c) 2006-2007 Peter de Ridder <peter@xfce.org>.])
 AC_INIT([thunar-svn-plugin], [tsp_version], [thunar-dev@xfce.org])
 AC_PREREQ([2.50])
 AC_CANONICAL_TARGET()
-AC_REVISION([$Id: configure.in.in 2439 2007-01-20 10:41:39Z benny $])
 
 dnl ***************************
 dnl *** Initialize automake ***
