Filled the NEWS, README, ChangeLog files for the release
(Old svn revision: 3826)

--- a/Makefile.am
+++ b/Makefile.am
@@ -12,4 +12,4 @@ rpm: dist
 	rpmbuild -ta $(PACKAGE)-$(VERSION).tar.gz
 	@rm -f $(PACKAGE)-$(VERSION).tar.gz
 
-# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
+# vi:set ts=8 sw=8 noet ai nocindent:
