--- a/icons/Makefile.am
+++ b/icons/Makefile.am
@@ -17,4 +17,4 @@ install-data-hook:
 		echo "***";						\
         fi
 
-# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
+# vi:set ts=8 sw=8 noet ai nocindent:
