Added a file selection dialog for some actions to change the file selection for the command
(Old svn revision: 4025)

--- a/configure.ac.in
+++ b/configure.ac.in
@@ -27,6 +27,7 @@ dnl *** Initialize autoconf ***
 dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2006-2007 Peter de Ridder <peter@xfce.org>.])
 AC_INIT([thunar-svn-plugin], [tsp_version], [thunar-dev@xfce.org])
+AC_PREFIX_DEFAULT([$(pkg-config --variable prefix thunarx-1 || echo /usr/local)])
 AC_PREREQ([2.50])
 AC_CANONICAL_TARGET()
 
