added switch action fixed permanent cancel after single cancel for status and log refreshes updated translations
(Old svn revision: 4922)

--- a/tsp-svn-helper/Makefile.am
+++ b/tsp-svn-helper/Makefile.am
@@ -46,6 +46,8 @@ tsp_svn_helper_SOURCES =						\
 	tsh-revert.c							\
 	tsh-status.h							\
 	tsh-status.c							\
+	tsh-switch.h							\
+	tsh-switch.c							\
 	tsh-unlock.h							\
 	tsh-unlock.c							\
 	tsh-update.h							\
