--- a/configure.ac.in
+++ b/configure.ac.in
@@ -12,9 +12,9 @@ dnl *** Version information ***
 dnl ***************************
 m4_define([tsp_version_major], [0])
 m4_define([tsp_version_minor], [0])
-m4_define([tsp_version_micro], [2])
+m4_define([tsp_version_micro], [3])
 m4_define([tsp_version_build], [r@REVISION@])
-m4_define([tsp_version_tag], []) # Leave empty for releases
+m4_define([tsp_version_tag], [svn]) # Leave empty for releases
 m4_define([tsp_version], [tsp_version_major().tsp_version_minor().tsp_version_micro()ifelse(tsp_version_tag(), [], [], [tsp_version_tag()-tsp_version_build()])])
 
 dnl *******************************************
