* thunar-svn-helper/tsh-{transfer,relocate}-dialog.c thunar-svn-helper/Makefile: Removed gtkfilechooserentry which get broken with the later version of gtk.   Enabled USE_FILE_ENTRY_REPLACEMENT fixing #4410 and #4498. * INSTALL: Updated to newer version provided by the auto tools.
(Old svn revision: 6802)

--- a/tsp-svn-helper/Makefile.am
+++ b/tsp-svn-helper/Makefile.am
@@ -83,17 +83,7 @@ tsp_svn_helper_SOURCES =						\
 	tsh-transfer-dialog.h						\
 	tsh-transfer-dialog.c						\
 	tsh-trust-dialog.h						\
-	tsh-trust-dialog.c						\
-	gtkfilechooserentry.h						\
-	gtkfilechooserentry.c						\
-	gtkfilechooserutils.h						\
-	gtkfilechooserutils.c						\
-	gtkfilechooser.h						\
-	gtkfilechooser.c						\
-	gtkfilechooserdefault.c						\
-	gtkfilechooserprivate.h						\
-	gtkprivate.h							\
-	gtkintl.h
+	tsh-trust-dialog.c
 
 tsp_svn_helper_CPPFLAGS =						\
 	-DG_LOG_DOMAIN=\"tsp-svn-helper\"
