--- a/configure.ac.in
+++ b/configure.ac.in
@@ -10,23 +10,23 @@ dnl
 dnl ***************************
 dnl *** Version information ***
 dnl ***************************
-m4_define([tsp_version_major], [0])
-m4_define([tsp_version_minor], [0])
-m4_define([tsp_version_micro], [4])
-m4_define([tsp_version_build], [r@REVISION@])
-m4_define([tsp_version_tag], [svn]) # Leave empty for releases
-m4_define([tsp_version], [tsp_version_major().tsp_version_minor().tsp_version_micro()ifelse(tsp_version_tag(), [], [], [tsp_version_tag()-tsp_version_build()])])
+m4_define([tvp_version_major], [0])
+m4_define([tvp_version_minor], [0])
+m4_define([tvp_version_micro], [4])
+m4_define([tvp_version_build], [r@REVISION@])
+m4_define([tvp_version_tag], [svn]) # Leave empty for releases
+m4_define([tvp_version], [tvp_version_major().tvp_version_minor().tvp_version_micro()ifelse(tvp_version_tag(), [], [], [tvp_version_tag()-tvp_version_build()])])
 
 dnl *******************************************
 dnl *** Debugging support for SVN snapshots ***
 dnl *******************************************
-m4_define([tsp_debug_default], [ifelse(tsp_version_tag(), [svn], [yes], [minimum])])
+m4_define([tvp_debug_default], [ifelse(tvp_version_tag(), [svn], [yes], [minimum])])
 
 dnl ***************************
 dnl *** Initialize autoconf ***
 dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2006-2007 Peter de Ridder <peter@xfce.org>.])
-AC_INIT([thunar-svn-plugin], [tsp_version], [thunar-dev@xfce.org])
+AC_INIT([thunar-vcs-plugin], [tvp_version], [thunar-dev@xfce.org])
 AC_PREFIX_DEFAULT([$(pkg-config --variable prefix thunarx-1 || echo /usr/local)])
 AC_PREREQ([2.50])
 AC_CANONICAL_TARGET()
@@ -102,8 +102,8 @@ dnl ***********************************
 dnl *** Check for debugging support ***
 dnl ***********************************
 AC_ARG_ENABLE([debug],
-AC_HELP_STRING([--enable-debug=@<:@no/minimum/yes/full@:>@], [Turn on debugging @<:@default=tsp_debug_default@:>@]),
-  [], [enable_debug=tsp_debug_default])
+AC_HELP_STRING([--enable-debug=@<:@no/minimum/yes/full@:>@], [Turn on debugging @<:@default=tvp_debug_default@:>@]),
+  [], [enable_debug=tvp_debug_default])
 AC_MSG_CHECKING([whether to enable debugging support])
 if test x"$enable_debug" = x"full" -o x"$enable_debug" = x"yes"; then
   dnl Check whether the compiler accepts the -fno-strict-aliasing
@@ -173,7 +173,7 @@ icons/16x16/Makefile
 icons/24x24/Makefile
 icons/48x48/Makefile
 po/Makefile.in
-thunar-svn-plugin/Makefile
-tsp-svn-helper/Makefile
+thunar-vcs-plugin/Makefile
+tvp-svn-helper/Makefile
 ])
 
