--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,41 +1,41 @@
-thunar-svn-plugin/thunar-svn-plugin.c
-thunar-svn-plugin/tsp-provider.c
-thunar-svn-plugin/tsp-svn-action.c
-thunar-svn-plugin/tsp-svn-property-page.c
-thunar-svn-plugin/tsp-svn-backend.c
-tsp-svn-helper/main.c
-tsp-svn-helper/tsh-add.c
-tsp-svn-helper/tsh-blame-dialog.c
-tsp-svn-helper/tsh-blame.c
-tsp-svn-helper/tsh-checkout.c
-tsp-svn-helper/tsh-cleanup.c
-tsp-svn-helper/tsh-commit.c
-tsp-svn-helper/tsh-common.c
-tsp-svn-helper/tsh-copy.c
-tsp-svn-helper/tsh-delete.c
-tsp-svn-helper/tsh-dialog-common.c
-tsp-svn-helper/tsh-export.c
-tsp-svn-helper/tsh-file-dialog.c
-tsp-svn-helper/tsh-file-selection-dialog.c
-tsp-svn-helper/tsh-import.c
-tsp-svn-helper/tsh-lock-dialog.c
-tsp-svn-helper/tsh-lock.c
-tsp-svn-helper/tsh-log-dialog.c
-tsp-svn-helper/tsh-log-message-dialog.c
-tsp-svn-helper/tsh-log.c
-tsp-svn-helper/tsh-login-dialog.c
-tsp-svn-helper/tsh-move.c
-tsp-svn-helper/tsh-notify-dialog.c
-tsp-svn-helper/tsh-properties-dialog.c
-tsp-svn-helper/tsh-properties.c
-tsp-svn-helper/tsh-relocate-dialog.c
-tsp-svn-helper/tsh-relocate.c
-tsp-svn-helper/tsh-resolved.c
-tsp-svn-helper/tsh-revert.c
-tsp-svn-helper/tsh-status-dialog.c
-tsp-svn-helper/tsh-status.c
-tsp-svn-helper/tsh-switch.c
-tsp-svn-helper/tsh-transfer-dialog.c
-tsp-svn-helper/tsh-trust-dialog.c
-tsp-svn-helper/tsh-unlock.c
-tsp-svn-helper/tsh-update.c
+thunar-vcs-plugin/thunar-vcs-plugin.c
+thunar-vcs-plugin/tvp-provider.c
+thunar-vcs-plugin/tvp-svn-action.c
+thunar-vcs-plugin/tvp-svn-property-page.c
+thunar-vcs-plugin/tvp-svn-backend.c
+tvp-svn-helper/main.c
+tvp-svn-helper/tsh-add.c
+tvp-svn-helper/tsh-blame-dialog.c
+tvp-svn-helper/tsh-blame.c
+tvp-svn-helper/tsh-checkout.c
+tvp-svn-helper/tsh-cleanup.c
+tvp-svn-helper/tsh-commit.c
+tvp-svn-helper/tsh-common.c
+tvp-svn-helper/tsh-copy.c
+tvp-svn-helper/tsh-delete.c
+tvp-svn-helper/tsh-dialog-common.c
+tvp-svn-helper/tsh-export.c
+tvp-svn-helper/tsh-file-dialog.c
+tvp-svn-helper/tsh-file-selection-dialog.c
+tvp-svn-helper/tsh-import.c
+tvp-svn-helper/tsh-lock-dialog.c
+tvp-svn-helper/tsh-lock.c
+tvp-svn-helper/tsh-log-dialog.c
+tvp-svn-helper/tsh-log-message-dialog.c
+tvp-svn-helper/tsh-log.c
+tvp-svn-helper/tsh-login-dialog.c
+tvp-svn-helper/tsh-move.c
+tvp-svn-helper/tsh-notify-dialog.c
+tvp-svn-helper/tsh-properties-dialog.c
+tvp-svn-helper/tsh-properties.c
+tvp-svn-helper/tsh-relocate-dialog.c
+tvp-svn-helper/tsh-relocate.c
+tvp-svn-helper/tsh-resolved.c
+tvp-svn-helper/tsh-revert.c
+tvp-svn-helper/tsh-status-dialog.c
+tvp-svn-helper/tsh-status.c
+tvp-svn-helper/tsh-switch.c
+tvp-svn-helper/tsh-transfer-dialog.c
+tvp-svn-helper/tsh-trust-dialog.c
+tvp-svn-helper/tsh-unlock.c
+tvp-svn-helper/tsh-update.c
