Added basic git support the the thunar-vcs-plugin.
(Old svn revision: 7636)

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,8 @@ SUBDIRS =								\
 	icons								\
 	po								\
 	thunar-vcs-plugin						\
-	tvp-svn-helper
+	tvp-svn-helper							\
+	tvp-git-helper
 
 distclean-local:
 	rm -rf *.spec *.cache *~
