--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -39,3 +39,14 @@ tvp-svn-helper/tsh-transfer-dialog.c
 tvp-svn-helper/tsh-trust-dialog.c
 tvp-svn-helper/tsh-unlock.c
 tvp-svn-helper/tsh-update.c
+tvp-git-helper/main.c
+tvp-git-helper/tgh-add.c
+tvp-git-helper/tgh-branch-dialog.c
+tvp-git-helper/tgh-branch.c
+tvp-git-helper/tgh-common.c
+tvp-git-helper/tgh-dialog-common.c
+tvp-git-helper/tgh-file-selection-dialog.c
+tvp-git-helper/tgh-reset-dialog.c
+tvp-git-helper/tgh-reset.c
+tvp-git-helper/tgh-status-dialog.c
+tvp-git-helper/tgh-status.c
