Added flags to configure.ac.in to disable subversion or git support.
(Old svn revision: 7714)

--- a/thunar-vcs-plugin/Makefile.am
+++ b/thunar-vcs-plugin/Makefile.am
@@ -13,25 +13,37 @@ extensions_LTLIBRARIES =						\
 	thunar-vcs-plugin.la
 
 thunar_vcs_plugin_la_SOURCES =						\
+	tvp-provider.c							\
+	tvp-provider.h							\
+	thunar-vcs-plugin.c
+if HAVE_SUBVERSION
+thunar_vcs_plugin_la_SOURCES +=						\
 	tvp-svn-backend.c						\
 	tvp-svn-backend.h						\
 	tvp-svn-action.c						\
 	tvp-svn-action.h						\
 	tvp-svn-property-page.c						\
-	tvp-svn-property-page.h						\
+	tvp-svn-property-page.h
+endif
+if HAVE_GIT
+thunar_vcs_plugin_la_SOURCES +=						\
 	tvp-git-action.c						\
-	tvp-git-action.h						\
-	tvp-provider.c							\
-	tvp-provider.h							\
-	thunar-vcs-plugin.c
+	tvp-git-action.h
+endif
 
 thunar_vcs_plugin_la_CFLAGS =						\
 	$(PLATFORM_CFLAGS)						\
 	$(THUNARX_CFLAGS)						\
-	$(THUNAR_VFS_CFLAGS)						\
+	$(THUNAR_VFS_CFLAGS)
+if HAVE_SUBVERSION
+thunar_vcs_plugin_la_CFLAGS +=						\
 	$(APR_CFLAGS)							\
-	-DTVP_SVN_HELPER=\"$(libexecdir)/tvp-svn-helper\"		\
+	-DTVP_SVN_HELPER=\"$(libexecdir)/tvp-svn-helper\"
+endif
+if HAVE_GIT
+thunar_vcs_plugin_la_CFLAGS +=						\
 	-DTVP_GIT_HELPER=\"$(libexecdir)/tvp-git-helper\"
+endif
 
 thunar_vcs_plugin_la_LDFLAGS =						\
 	-avoid-version							\
@@ -39,7 +51,10 @@ thunar_vcs_plugin_la_LDFLAGS =						\
 	-module								\
 	$(PLATFORM_LDFLAGS)						\
 	$(THUNARX_LDFLAGS)						\
-	$(THUNAR_VFS_LDFLAGS)						\
+	$(THUNAR_VFS_LDFLAGS)
+if HAVE_SUBVERSION
+thunar_vcs_plugin_la_LDFLAGS +=						\
 	$(APR_LDFLAGS)
+endif
 
 # vi:set ts=8 sw=8 noet ai nocindent:
