--- a/configure.ac.in
+++ b/configure.ac.in
@@ -69,34 +69,42 @@ dnl *** Check for required packages ***
 dnl ***********************************
 XDT_CHECK_PACKAGE([THUNARX], [thunarx-1], [0.4.0])
 XDT_CHECK_PACKAGE([THUNAR_VFS], [thunar-vfs-1], [0.4.0])
-XDT_CHECK_PACKAGE([APR], [apr-1], [0.9.7])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.6.0])
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.6.0])
 XDT_CHECK_PACKAGE([GOBJECT], [gobject-2.0], [2.6.0])
-AC_CHECK_LIB([svn_subr-1], [main], ,
-[
-	echo "*** The required library 'svn_subr-1' was not found on your system."
-	echo "*** Please install libsvn (atleast version 1.5)."
-	exit 1
-])
-AC_CHECK_LIB([svn_fs-1], [main], ,
-[
-	echo "*** The required library 'svn_fs-1' was not found on your system."
-	echo "*** Please install libsvn (atleast version 1.5)."
-	exit 1
-])
-AC_CHECK_LIB([svn_wc-1], [main], ,
-[
-	echo "*** The required library 'svn_wc-1' was not found on your system."
-	echo "*** Please install libsvn (atleast version 1.5)."
-	exit 1
-])
-AC_CHECK_LIB([svn_client-1], [main], ,
-[
-	echo "*** The required library 'svn_wc-1' was not found on your system."
-	echo "*** Please install libsvn (atleast version 1.5)."
-	exit 1
-])
+
+dnl ***********************************
+dnl *** Check for optional packages ***
+dnl ***********************************
+XDT_CHECK_OPTIONAL_PACKAGE([APR], [apr-1], [0.9.7], [subversion], [libsvn])
+if test x"$APR_FOUND" = x"yes"; then
+    found_subversion=yes
+    AC_CHECK_LIB([svn_subr-1], [main], , [found_subversion=no])
+    AC_CHECK_LIB([svn_fs-1], [main], , [found_subversion=no])
+    AC_CHECK_LIB([svn_wc-1], [main], , [found_subversion=no])
+    AC_CHECK_LIB([svn_client-1], [main], , [found_subversion=no])
+    if test x"$found_subversion" = x"yes"; then
+        AC_DEFINE([HAVE_SUBVERSION], [1], [Define if libsvn is present])
+    fi
+else
+    AC_MSG_CHECKING([for optional package subversion])
+    AC_MSG_RESULT([disabled])
+fi
+AM_CONDITIONAL([HAVE_SUBVERSION], [test x"$found_subversion" = x"yes"])
+
+AC_ARG_ENABLE([git], 
+    AC_HELP_STRING([--enable-git], [Enable git (default)])
+AC_HELP_STRING([--disable-git], [Disable git]),
+    [check_for_git=$enableval], [check_for_git=yes])
+AC_MSG_CHECKING([for optional package git])
+if test x"$check_for_git" = x"yes"; then
+    found_git=yes
+    AC_MSG_RESULT([enabled])
+    AC_DEFINE([HAVE_GIT], [1], [Define if git is endabled])
+else
+    AC_MSG_RESULT([disabled])
+fi
+AM_CONDITIONAL([HAVE_GIT], [test x"$found_git" = x"yes"])
 
 dnl ***********************************
 dnl *** Check for debugging support ***
