* thunar-vcs-plugin/tvp-svn-action.c: The add context menu item is now visible on folder background menu too. * tvp-svn-helper/tsh-{file-selection,log-message,log,status}-dialog.c: The file lists are tree views now. * tvp-svn-helper/tsh-tree-common.[ch]: Common routines to build a tree view of files. * tvp-svn-helper/tsh-common.c(tsh_log_func) tvp-svn-helper/tsh-log-dialog.[ch]: Support has_children for log entries. * tvp-svn-helper/Makefile.am: tsh-tree-common.[ch] added.
(Old svn revision: 7843)

--- a/tvp-svn-helper/Makefile.am
+++ b/tvp-svn-helper/Makefile.am
@@ -56,6 +56,8 @@ tvp_svn_helper_SOURCES =						\
 	tsh-unlock.c							\
 	tsh-update.h							\
 	tsh-update.c							\
+	tsh-tree-common.h						\
+	tsh-tree-common.c						\
 	tsh-dialog-common.h						\
 	tsh-dialog-common.c						\
 	tsh-blame-dialog.h						\
