--- a/tvp-svn-helper/Makefile.am
+++ b/tvp-svn-helper/Makefile.am
@@ -92,7 +92,7 @@ tvp_svn_helper_CPPFLAGS =						\
 
 tvp_svn_helper_CFLAGS =							\
 	$(PLATFORM_CFLAGS)						\
-	$(THUNAR_VFS_CFLAGS)						\
+	$(LIBXFCE4UTIL_CFLAGS)						\
 	$(GTK_CFLAGS)							\
 	$(GLIB_CFLAGS)							\
 	$(GOBJECT_CFLAGS)						\
@@ -100,9 +100,10 @@ tvp_svn_helper_CFLAGS =							\
 
 tvp_svn_helper_LDFLAGS =						\
 	$(PLATFORM_LIBS)						\
-	$(THUNAR_VFS_LIBS)						\
+	$(LIBXFCE4UTIL_LIBS)						\
 	$(GTK_LIBS)							\
 	$(GLIB_LIBS)							\
+	$(GTHREAD_LIBS)							\
 	$(GOBJECT_LIBS)							\
 	$(APR_LIBS)
 
