--- a/configure.ac.in
+++ b/configure.ac.in
@@ -27,7 +27,7 @@ dnl *** Initialize autoconf ***
 dnl ***************************
 AC_COPYRIGHT([Copyright (c) 2006-2007 Peter de Ridder <peter@xfce.org>.])
 AC_INIT([thunar-vcs-plugin], [tvp_version], [thunar-dev@xfce.org])
-AC_PREFIX_DEFAULT([$(pkg-config --variable prefix thunarx-1 || echo /usr/local)])
+AC_PREFIX_DEFAULT([$(pkg-config --variable prefix thunarx-2 || echo /usr/local)])
 AC_PREREQ([2.50])
 AC_CANONICAL_TARGET()
 
@@ -72,10 +72,13 @@ XDT_I18N([@LINGUAS@])
 dnl ***********************************
 dnl *** Check for required packages ***
 dnl ***********************************
-XDT_CHECK_PACKAGE([THUNARX], [thunarx-1], [0.4.0])
-XDT_CHECK_PACKAGE([THUNAR_VFS], [thunar-vfs-1], [0.4.0])
+XDT_CHECK_PACKAGE([THUNARX], [thunarx-2], [0.4.0])
+XDT_CHECK_PACKAGE([EXO], [exo-0.3], [0.3.100])
+XDT_CHECK_PACKAGE([LIBXFCE4UTIL], [libxfce4util-1.0], [4.6.0])
+dnl XDT_CHECK_PACKAGE([THUNAR_VFS], [thunar-vfs-1], [0.4.0])
 XDT_CHECK_PACKAGE([GTK], [gtk+-2.0], [2.6.0])
 XDT_CHECK_PACKAGE([GLIB], [glib-2.0], [2.6.0])
+XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.6.0])
 XDT_CHECK_PACKAGE([GOBJECT], [gobject-2.0], [2.6.0])
 
 dnl ***********************************
