--- a/configure.ac.in
+++ b/configure.ac.in
@@ -56,6 +56,7 @@ dnl ********************************
 AC_PROG_CC()
 AC_PROG_LD()
 AC_PROG_INSTALL()
+AC_PROG_INTLTOOL()
 AM_PROG_CC_C_O()
 
 dnl **************************
