* tvp-git-helper/main.c tvp-git-helper/tgh-clone.[ch]   tvp-git-helper/tgh-transfer-dialog.[ch]: Added clone action. * tvp-git-helper/tgh-{add,branch,reset,status}.[ch]: Cleaned the code a   bit.

--- a/tvp-git-helper/Makefile.am
+++ b/tvp-git-helper/Makefile.am
@@ -18,6 +18,8 @@ tvp_git_helper_SOURCES =						\
 	tgh-add.c							\
 	tgh-branch.h							\
 	tgh-branch.c							\
+	tgh-clone.h							\
+	tgh-clone.c							\
 	tgh-common.h							\
 	tgh-common.c							\
 	tgh-reset.h							\
@@ -33,7 +35,9 @@ tvp_git_helper_SOURCES =						\
 	tgh-reset-dialog.h						\
 	tgh-reset-dialog.c						\
 	tgh-status-dialog.h						\
-	tgh-status-dialog.c
+	tgh-status-dialog.c						\
+	tgh-transfer-dialog.h						\
+	tgh-transfer-dialog.c
 
 tvp_git_helper_CPPFLAGS =						\
 	-DG_LOG_DOMAIN=\"tvp-git-helper\"				\
