* po/POTFILES.in: added git helper files. * po/thunar-vcs-plugin.pot po/*.po: updated po files.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -42,12 +42,16 @@ tvp-svn-helper/tsh-unlock.c
 tvp-svn-helper/tsh-update.c
 tvp-git-helper/main.c
 tvp-git-helper/tgh-add.c
-tvp-git-helper/tgh-branch-dialog.c
 tvp-git-helper/tgh-branch.c
+tvp-git-helper/tgh-branch-dialog.c
+tvp-git-helper/tgh-clone.c
 tvp-git-helper/tgh-common.c
 tvp-git-helper/tgh-dialog-common.c
 tvp-git-helper/tgh-file-selection-dialog.c
-tvp-git-helper/tgh-reset-dialog.c
+tvp-git-helper/tgh-log.c
+tvp-git-helper/tgh-log-dialog.c
 tvp-git-helper/tgh-reset.c
-tvp-git-helper/tgh-status-dialog.c
+tvp-git-helper/tgh-reset-dialog.c
 tvp-git-helper/tgh-status.c
+tvp-git-helper/tgh-status-dialog.c
+tvp-git-helper/tgh-transfer-dialog.c
