* tvp-git-helper/tgh-add.c tvp-git-helper/tgh-common.[ch]   tvp-git-helper/tgh-notify-dialog.[ch]: Added notify dialog to make add   more verbose. * tvp-git-helper/tgh-common.c   tvp-git-helper/tgh-file-selection-dialog.c: Improved status output   parsing.

--- a/tvp-git-helper/Makefile.am
+++ b/tvp-git-helper/Makefile.am
@@ -36,6 +36,8 @@ tvp_git_helper_SOURCES =						\
 	tgh-file-selection-dialog.c					\
 	tgh-log-dialog.h						\
 	tgh-log-dialog.c						\
+	tgh-notify-dialog.h						\
+	tgh-notify-dialog.c						\
 	tgh-status-dialog.h						\
 	tgh-status-dialog.c						\
 	tgh-transfer-dialog.h						\
