* icons/: Added git icons and 16x16 subversion icon.

--- a/icons/16x16/Makefile.am
+++ b/icons/16x16/Makefile.am
@@ -1,8 +1,9 @@
-
-appsdir = $(datadir)/icons/hicolor/16x16/apps
-apps_DATA =
+iconsdir = $(datadir)/icons/hicolor/48x48/apps
+icons_DATA =								\
+	git.png								\
+	subversion.png
 
 EXTRA_DIST =								\
-	$(apps_DATA)
+	$(icons_DATA)
 
 # vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
