--- a/icons/24x24/Makefile.am
+++ b/icons/24x24/Makefile.am
@@ -1,7 +1,9 @@
 iconsdir = $(datadir)/icons/hicolor/24x24/apps
 icons_DATA =								\
+	git.png								\
 	subversion.png
 
 EXTRA_DIST =								\
 	$(icons_DATA)
 
+# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
