--- a/icons/48x48/Makefile.am
+++ b/icons/48x48/Makefile.am
@@ -1,7 +1,9 @@
 iconsdir = $(datadir)/icons/hicolor/48x48/apps
 icons_DATA =								\
+	git.png								\
 	subversion.png
 
 EXTRA_DIST =								\
 	$(icons_DATA)
 
+# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
