* thunar-vcs-plugin/tvp-git-action.c tvp-git-helper/main.c   tvp-git-helper/tgh-move.[ch]: Added move action. * tvp-git-helper/tgh-common.c: Correctly exit the helper if no parent   was given for an error dialog.

--- a/tvp-git-helper/Makefile.am
+++ b/tvp-git-helper/Makefile.am
@@ -28,6 +28,8 @@ tvp_git_helper_SOURCES =						\
 	tgh-common.c							\
 	tgh-log.h							\
 	tgh-log.c							\
+	tgh-move.h							\
+	tgh-move.c							\
 	tgh-reset.h							\
 	tgh-reset.c							\
 	tgh-stash.h							\
