--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,13 +1,35 @@
 thunar-vcs-plugin/thunar-vcs-plugin.c
+thunar-vcs-plugin/tvp-git-action.c
 thunar-vcs-plugin/tvp-provider.c
 thunar-vcs-plugin/tvp-svn-action.c
-thunar-vcs-plugin/tvp-svn-property-page.c
 thunar-vcs-plugin/tvp-svn-backend.c
-thunar-vcs-plugin/tvp-git-action.c
+thunar-vcs-plugin/tvp-svn-property-page.c
+tvp-git-helper/main.c
+tvp-git-helper/tgh-add.c
+tvp-git-helper/tgh-blame.c
+tvp-git-helper/tgh-blame-dialog.c
+tvp-git-helper/tgh-branch.c
+tvp-git-helper/tgh-branch-dialog.c
+tvp-git-helper/tgh-clean.c
+tvp-git-helper/tgh-clean-dialog.c
+tvp-git-helper/tgh-clone.c
+tvp-git-helper/tgh-common.c
+tvp-git-helper/tgh-dialog-common.c
+tvp-git-helper/tgh-file-selection-dialog.c
+tvp-git-helper/tgh-log.c
+tvp-git-helper/tgh-log-dialog.c
+tvp-git-helper/tgh-move.c
+tvp-git-helper/tgh-notify-dialog.c
+tvp-git-helper/tgh-reset.c
+tvp-git-helper/tgh-stash.c
+tvp-git-helper/tgh-stash-dialog.c
+tvp-git-helper/tgh-status.c
+tvp-git-helper/tgh-status-dialog.c
+tvp-git-helper/tgh-transfer-dialog.c
 tvp-svn-helper/main.c
 tvp-svn-helper/tsh-add.c
-tvp-svn-helper/tsh-blame-dialog.c
 tvp-svn-helper/tsh-blame.c
+tvp-svn-helper/tsh-blame-dialog.c
 tvp-svn-helper/tsh-checkout.c
 tvp-svn-helper/tsh-cleanup.c
 tvp-svn-helper/tsh-commit.c
@@ -19,41 +41,25 @@ tvp-svn-helper/tsh-export.c
 tvp-svn-helper/tsh-file-dialog.c
 tvp-svn-helper/tsh-file-selection-dialog.c
 tvp-svn-helper/tsh-import.c
-tvp-svn-helper/tsh-lock-dialog.c
 tvp-svn-helper/tsh-lock.c
-tvp-svn-helper/tsh-log-dialog.c
-tvp-svn-helper/tsh-log-message-dialog.c
+tvp-svn-helper/tsh-lock-dialog.c
 tvp-svn-helper/tsh-log.c
+tvp-svn-helper/tsh-log-dialog.c
 tvp-svn-helper/tsh-login-dialog.c
+tvp-svn-helper/tsh-log-message-dialog.c
 tvp-svn-helper/tsh-move.c
 tvp-svn-helper/tsh-notify-dialog.c
-tvp-svn-helper/tsh-properties-dialog.c
 tvp-svn-helper/tsh-properties.c
-tvp-svn-helper/tsh-relocate-dialog.c
+tvp-svn-helper/tsh-properties-dialog.c
 tvp-svn-helper/tsh-relocate.c
+tvp-svn-helper/tsh-relocate-dialog.c
 tvp-svn-helper/tsh-resolved.c
 tvp-svn-helper/tsh-revert.c
-tvp-svn-helper/tsh-status-dialog.c
 tvp-svn-helper/tsh-status.c
+tvp-svn-helper/tsh-status-dialog.c
 tvp-svn-helper/tsh-switch.c
 tvp-svn-helper/tsh-transfer-dialog.c
+tvp-svn-helper/tsh-tree-common.c
 tvp-svn-helper/tsh-trust-dialog.c
 tvp-svn-helper/tsh-unlock.c
 tvp-svn-helper/tsh-update.c
-tvp-git-helper/main.c
-tvp-git-helper/tgh-add.c
-tvp-git-helper/tgh-branch.c
-tvp-git-helper/tgh-branch-dialog.c
-tvp-git-helper/tgh-clone.c
-tvp-git-helper/tgh-common.c
-tvp-git-helper/tgh-dialog-common.c
-tvp-git-helper/tgh-file-selection-dialog.c
-tvp-git-helper/tgh-log.c
-tvp-git-helper/tgh-log-dialog.c
-tvp-git-helper/tgh-notify-dialog.c
-tvp-git-helper/tgh-reset.c
-tvp-git-helper/tgh-stash.c
-tvp-git-helper/tgh-stash-dialog.c
-tvp-git-helper/tgh-status.c
-tvp-git-helper/tgh-status-dialog.c
-tvp-git-helper/tgh-transfer-dialog.c
