--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,8 @@ stamp-h1
 po/Makefile.in.in
 po/POTFILES
 po/stamp-it
-po/*gmo
+po/*.gmo
+po/thunar-vcs-plugin.pot
 thunar-vcs-plugin/thunar-vcs-plugin.la
 thunar-vcs-plugin/thunar_vcs_plugin_la-*.lo
 tvp-git-helper/tvp-git-helper
