Added makefile macros as noted in bug #7870.
macros for GTK GLIB GOBJECT and GTHREAD were missing from some
makefiles.

--- a/thunar-vcs-plugin/Makefile.am
+++ b/thunar-vcs-plugin/Makefile.am
@@ -60,6 +60,9 @@ endif
 
 thunar_vcs_plugin_la_CFLAGS =						\
 	$(PLATFORM_CFLAGS)						\
+	$(GTK_CFLAGS)							\
+	$(GLIB_CFLAGS)							\
+	$(GOBJECT_CFLAGS)						\
 	$(THUNARX_CFLAGS)						\
 	$(EXO_CFLAGS)							\
 	$(LIBXFCE4UTIL_CFLAGS)
@@ -73,6 +76,9 @@ thunar_vcs_plugin_la_LDFLAGS =						\
 	-export-dynamic							\
 	-module								\
 	$(PLATFORM_LDFLAGS)						\
+	$(GTK_LIBS)							\
+	$(GLIB_LIBS)							\
+	$(GOBJECT_LIBS)							\
 	$(THUNARX_LIBS)							\
 	$(EXO_LIBS)							\
 	$(LIBXFCE4UTIL_LIBS)
